# spjax

./: flake.nix  pyproject.toml
examples/: sparse_tensor_encoding.py  spmm.py  spmv.py
experiments/: run_spmv.py  spmv_kernel.py
src/spjax/: __init__.py  encoding.py  primitive.py  tensor.py
tests/: test_spmm.py
