[project]
name = "spjax"
version = "0.1.0"
description = "Sparse JAX"
readme = "README.md"
authors = [
    { name = "Vito Secona", email = "secona00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
cuda13 = [
    "jax[cuda13]"
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
